# ai-scheduler-bot

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/postgres/: 0001_init.sql
migrations/sqlite/: 0001_init.sql
src/: config.rs  error.rs  main.rs
src/domain/: event.rs  mod.rs
src/llm/: mod.rs  ollama.rs  prompt.rs
src/notification/: mod.rs  slack.rs
src/slack/: handler.rs  mod.rs  response.rs  socket.rs
src/store/: mod.rs  sqlx_store.rs
