[package]
name = "ai-scheduler-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json", "rustls"] }
rig-core = "0.37.0"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
slack-morphism = { version = "2.22.0", features = ["axum"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[features]
default = ["sqlite"]
sqlite = []
postgres = []
